--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -8,7 +8,7 @@ tag: main
 <div class="row">
 	<div class="col-sm-3">
 	    <div class="">
-		     <img src="{{ /assets/images/download-7-high-res-img.png | relative_url }}" alt="Financial Trading with Binary.com">	
+		     <img src="{{ "/assets/images/download-7-high-res-img.png" | relative_url }}" alt="Financial Trading with Binary.com">	
 		</div>
 	</div>	
 	<div class="col-sm-9">				   
