--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -8,12 +8,12 @@ tag: main
 <div class="row">
 	<div class="col-sm-3">
 	    <div class="">
-		     <img src="{{ "/assets/images/download-7-high-res-img.png" | relative_url }}" alt="Financial Trading with Binary.com">	
+		     <img src="{{ "/assets/images/download-7-high-res-img.png | relative_url }}" alt="Financial Trading with Binary.com">	
 		</div>
 	</div>	
 	<div class="col-sm-9">				   
 		<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with Binary.com</h2></a>
-		<div class="separator primary-color col-xs-6 push-xs-3"></div>
+		<div class="separator primary-color"></div>
 		<p class="post--date">Author: Binary.com</p>
 		<p>If you are new at Binary.com and would like to start trading with us, this booklet is a very good point to start with. After reading it, you will know more about our brand and products as well as basic concepts on how to trade with us.</p>	
 		
