--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -5,6 +5,7 @@ permalink: /en/ebooks/
 language: en
 tag: main
 ---
+<p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
 <div class="row">
 	<div class="col-sm-3">
 	    <div class="">
@@ -13,11 +14,10 @@ tag: main
 	</div>	
 	<div class="col-sm-9">				   
 		<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
-		<div class="separator primary-color col-xs-6"></div>
-		<p class="post--date">Author: Binary.com</p>
-		<p>If you are new at Binary.com and would like to start trading with us, this booklet is a very good point to start with. After reading it, you will know more about our brand and products as well as basic concepts on how to trade with us.</p>	
-		
-		<a class="button" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><span>Download</span></a>							
+		<div class="separator primary-color"></div>
+		<p class="post--date">Author: ChampionFX</p>
+		<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
+		<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
 	</div>
 </div>
