--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -15,7 +15,7 @@ tag: main
 	<div class="col-sm-9">				   
 		<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
 		<div class="separator primary-color"></div>
-		<p class="post--date">Author: ChampionFX</p>
+		<p class="secondary-color">Author: ChampionFX</p>
 		<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
 		<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
