--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -6,31 +6,35 @@ language: en
 tag: main
 ---
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
-<div class="row list--item">
-	<div class="col-sm-2">
-		<div class="">
-			 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+<div class=" list--item">
+	<div class="row">
+		<div class="col-sm-2">
+			<div class="">
+				 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+			</div>
+		</div>	
+		<div class="col-sm-10">				   
+			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
+			<div class="separator primary-color"></div>
+			<p class="secondary-color">Author: ChampionFX</p>
+			<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
+			<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
-	</div>	
-	<div class="col-sm-10">				   
-		<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
-		<div class="separator primary-color"></div>
-		<p class="secondary-color">Author: ChampionFX</p>
-		<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
-		<p><a class="button" href="#"><span>Download</span></a></p>							
 	</div>
 </div>
-<div class="row list--item">
-	<div class="col-sm-2">
-		<div class="">
-			 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+<div class=" list--item">
+	<div class="row">
+		<div class="col-sm-2">
+			<div class="">
+				 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+			</div>
+		</div>	
+		<div class="col-sm-10">				   
+			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
+			<div class="separator primary-color"></div>
+			<p class="secondary-color">Author: ChampionFX</p>
+			<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
+			<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
-	</div>	
-	<div class="col-sm-10">				   
-		<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
-		<div class="separator primary-color"></div>
-		<p class="secondary-color">Author: ChampionFX</p>
-		<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
-		<p><a class="button" href="#"><span>Download</span></a></p>							
 	</div>
 </div>
