--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -6,7 +6,7 @@ language: en
 tag: main
 ---
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
-<div class=" list--item">
+<div class=" list--item-lg">
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="">
@@ -22,7 +22,7 @@ tag: main
 		</div>
 	</div>
 </div>
-<div class=" list--item">
+<div class=" list--item-lg">
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="">
