--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -30,10 +30,10 @@ tag: main
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
-			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
+			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Trading the Forex Market</h2></a>
 			<div class="separator primary-color"></div>
-			<p class="secondary-color">Author: ChampionFX</p>
-			<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
+			<p class="secondary-color">Author: Vince Stanzione</p>
+			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that empower you to make better decisions when you are trading your favourite currency pairs.</p>		
 			<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
 	</div>
