--- a/pages/en/1-blog.html
+++ b/pages/en/1-blog.html
@@ -18,4 +18,4 @@ tag: main
 	</div>	
 </div>
 {% endfor %}
-<p class="p--action"><a class="button" href="{{site.url}}/en/blog/"><span>Read more in the archive</span></a></p>
+<p class="p--action"><a class="button" href="{{ "/en/blog/" | relative_url }}"><span>Read more in the archive</span></a></p>
