--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@ language: en
 	</div>	
 </div>
 {% endfor %}
-<p class="p--action"><a class="button" href="{{site.baseurl}}/en/blog/"><span>Read more in the archive</span></a></p>
+<p class="p--action"><a class="button" href="{{ "/en/blog/" | relative_url }}"><span>Read more in the archive</span></a></p>
