--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -5,3 +5,4 @@ permalink: /en/glossary/
 language: en
 tag: main
 ---
+<p>Common financial terms that you will come across when trading Forex, CFDs, binary options, and more with ChampionFX</p>
