--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -24,7 +24,14 @@ tag: main
 				
 			</ul>
 			<div id="what-is-cfd" aria-labelledby="ui-id-1" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-hidden="false" style="">
-				Tab 1
+				<div class="row"
+					<div class="col-sm-3 glossary-title">
+						<h2>A</h2>
+					</div>
+					<div class="col-sm-9">
+						<h2>Lorem ipsum dolor sit amet</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nunc metus, placerat nec vulputate sit amet, semper non metus. Morbi vel mi sapien, a egestas nunc. Vivamus bibendum lacinia elit ultrices pellentesque. Integer ac enim sit amet leo volutpat rhoncus eget sed lacus. Nunc aliquam bibendum sem, ut sagittis sem vehicula sed. Maecenas vitae est arcu, at malesuada est. Curabitur et magna urna. Phasellus libero lectus, egestas vitae vestibulum adipiscing, posuere at neque. Sed venenatis vehicula eros, ut ultrices nulla interdum nec. Curabitur scelerisque, purus vitae lacinia vestibulum, sem elit ultricies odio, nec porta lorem purus eget velit. Cras nec tempus nisi. Mauris laoreet volutpat magna. Donec tincidunt pharetra ligula at viverra. Integer sed interdum libero. Cras a convallis nibh. Praesent egestas imperdiet vehicula. Pellentesque eu felis nec mauris iaculis pellentesque.</p>
+					</div>
 			</div>
 			<div id="how-to-trade-cfd" aria-labelledby="ui-id-2" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-hidden="true" style="display: none;">
 				Tab 2
