--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -5,3 +5,9 @@ permalink: /en/videos/
 language: en
 tag: main
 ---
+<div class="video-container">
+    <iframe src="//www.youtube.com/embed/videoseries?list=PLVJJAiu3lRjYyPa0Ftbsg9QLRJOER57tc" allowfullscreen></iframe>
+</div>
+<p class="p--action"><a class="button" href=""><span>Get started with just $5, Try it now!</span></a></p>
+<h1>Archive</h1>
+<div data-role="youtube-playlist" data-list-id="PLVJJAiu3lRjYyPa0Ftbsg9QLRJOER57tc"></div>
