--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -6,8 +6,8 @@ language: en
 tag: main
 ---
 <div class="video-container">
-    <iframe src="//www.youtube.com/embed/videoseries?list=PLVJJAiu3lRjYyPa0Ftbsg9QLRJOER57tc" allowfullscreen></iframe>
+    <iframe src="//www.youtube.com/embed/uTxJcFymyRE" allowfullscreen></iframe>	
 </div>
 <p class="p--action"><a class="button" href=""><span>Get started with just $5, Try it now!</span></a></p>
 <h1>Archive</h1>
-<div data-role="youtube-playlist" data-list-id="PLVJJAiu3lRjYyPa0Ftbsg9QLRJOER57tc"></div>
+<div data-role="youtube-playlist" data-list-id="PLFiUR_KIgoDLxS5teiLeBr2zOiNGrGPrF"></div>
