--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -5,9 +5,10 @@ permalink: /en/videos/
 language: en
 tag: main
 ---
+<p>Enhance your trading skills and knowledge trough our library of video tutorials, walkthroughs, and more.</p>
 <div class="video-container">
     <iframe src="//www.youtube.com/embed/uTxJcFymyRE" allowfullscreen></iframe>	
 </div>
-<p class="p--action"><a class="button" href=""><span>Get started with just $5, Try it now!</span></a></p>
+<p class="p--action"><a class="button" href=""><span>Get started, Try it now!</span></a></p>
 <h1>Archive</h1>
 <div data-role="youtube-playlist" data-list-id="PLFiUR_KIgoDLxS5teiLeBr2zOiNGrGPrF"></div>
