--- a/pages/en/learningcenter/commodities-corner.html
+++ b/pages/en/learningcenter/commodities-corner.html
@@ -1,9 +1,9 @@
 ---
 layout: page-learning-center
-title: Learning  Centre
-permalink: /en/learning-centre/
+title: Commodities Corner
+permalink: /en/commodities-corner/
 language: en
-tag: main
+tag: learning
 ---
 <div class="row list--item">
 	<div class="col-sm-12">
