--- a/pages/en/4-eontributors.html
+++ b/pages/en/4-eontributors.html
@@ -4,6 +4,7 @@ title: Contributors
 permalink: /en/contributors/
 language: en
 tag: main
+sub: contributors
 ---
 <p>ChampionFX contributors deliver ebooks, market reports, and more for free. Study their materials and learn market trend analysis, trading strategies, and how to identify potential trading opportunities in Forex, CFDs, metals, binary options, and more.</p>
 {% include navs/contributors-grid.html %}
