--- a/pages/en/7-learning-center.html
+++ b/pages/en/7-learning-center.html
@@ -4,6 +4,7 @@ title: Learning  Centre
 permalink: /en/learning-centre/
 language: en
 tag: main
+sub: learningcentre
 ---
 <div class="row list--item">
 	<div class="col-sm-12">
