--- a/pages/en/contributors/10-mellon.html
+++ b/pages/en/contributors/10-mellon.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Jim Mellon"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/jim-mellon/
 image: /assets/images/speaker/jimmellon.jpg
 ---
