--- a/pages/en/contributors/11-vince-stanzione.html
+++ b/pages/en/contributors/11-vince-stanzione.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Vince Stanzione"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/vince-stanzione/
 image: /assets/images/speaker/vince.jpg
 ---
