--- a/pages/en/contributors/13-dave-evans.html
+++ b/pages/en/contributors/13-dave-evans.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Dave Evans"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/dave-evans/
 image: /assets/images/speaker/dave.gif
 ---
