--- a/pages/en/contributors/14-matilla.html
+++ b/pages/en/contributors/14-matilla.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "M.A. Samuel Matilla"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/samuel-matilla/
 image: /assets/images/speaker/samuel.jpg
 ---
