--- a/pages/en/contributors/15-phill-carr.html
+++ b/pages/en/contributors/15-phill-carr.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Phil Carr"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/phil-carr/
 image: /assets/images/speaker/Phil-Carr-Webshot.jpg
 ---
