--- a/pages/en/contributors/16-nik-kalse.html
+++ b/pages/en/contributors/16-nik-kalse.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Nik Kalsi"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/nik-kalsi/
 image: /assets/images/speaker/Nik-Kalsi-Profile-Pic.jpg
 ---
