--- a/pages/en/contributors/17-ehab-gubil.html
+++ b/pages/en/contributors/17-ehab-gubil.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Dr. Ehab Gubil"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/ehab-gubil/
 image: /assets/images/speaker/ehubgubil.jpg
 ---
