--- a/pages/en/contributors/18-chris-svorcik.html
+++ b/pages/en/contributors/18-chris-svorcik.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Chris Svorcik"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/chris-svorcik/
 image: /assets/images/speaker/chriss.jpg
 ---
