--- a/pages/en/contributors/20-alberto-alvarado.html
+++ b/pages/en/contributors/20-alberto-alvarado.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Alberto Alvarado"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/alberto-alvarado/
 image: /assets/images/speaker/alberto-alvarado.jpg
 ---
