--- a/pages/en/contributors/21-mat-shaw.html
+++ b/pages/en/contributors/21-mat-shaw.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Matt Shaw"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/matt-shaw/
 image: /assets/images/speaker/mattshaw.png
 ---
