--- a/pages/en/contributors/22-vernon-less.html
+++ b/pages/en/contributors/22-vernon-less.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Vernon Lees"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/vernon-less/
 image: /assets/images/speaker/avatar-male.jpg
 ---
