--- a/pages/en/contributors/24-zio-s.html
+++ b/pages/en/contributors/24-zio-s.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Zio S"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/zeo-s/
 image: /assets/images/speaker/avatar-male.jpg
 ---
