--- a/pages/en/contributors/25-paul-wallace.html
+++ b/pages/en/contributors/25-paul-wallace.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Paul Wallace"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/paul-wallace/
 image: /assets/images/speaker/speaker-1.jpg
 ---
