--- a/pages/en/learningcenter/commodities-corner.html
+++ b/pages/en/learningcenter/commodities-corner.html
@@ -4,6 +4,7 @@ title: Commodities Corner
 permalink: /en/commodities-corner/
 language: en
 tag: learning
+sub: learningcentre
 ---
 <div class="row list--item">
 	<div class="col-sm-12">
