--- a/pages/en/learningcenter/downloads.html
+++ b/pages/en/learningcenter/downloads.html
@@ -4,6 +4,7 @@ title: Downloads
 permalink: /en/downloads/
 language: en
 tag: learning
+sub: learningcentre
 ---
 <div class="Page-List__item">
 	<div class="col-sm-3">
