--- a/pages/en/learningcenter/webinars.html
+++ b/pages/en/learningcenter/webinars.html
@@ -4,6 +4,7 @@ title: Webinars
 permalink: /en/webinars/
 language: en
 tag: learning
+sub: learningcentre
 ---
 <p>Binary.com in collaboration with professional traders provides free training sessions for both beginners and advanced traders</p>
 <div class="row list--item">
