--- a/pages/en/contributors/12-lee-sandford.html
+++ b/pages/en/contributors/12-lee-sandford.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Lee Sandford"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/lee-sandford/
 image: /assets/images/speaker/lee.png
 ---
