--- a/pages/en/contributors/23-theo-patsios.html
+++ b/pages/en/contributors/23-theo-patsios.html
@@ -3,6 +3,7 @@ layout: page-contributor
 title: "Theo Patsios"
 language: en
 tag: contributor
+sub: contributors
 permalink: /en/theo-patsios/
 image: /assets/images/speaker/ge-english-speaker-on-forex.png
 ---
