--- a/pages/en/learningcenter/security-tips.html
+++ b/pages/en/learningcenter/security-tips.html
@@ -4,6 +4,7 @@ title: Security Tips
 permalink: /en/security-tips/
 language: en
 tag: learning
+sub: learningcentre
 ---
 <p>Here at <a href="https://binary.com/?utm_source=blog&utm_medium=social&utm_campaign=SecurityTips">Binary.com</a> we take that extra step to protect you. Here are a few guidelines to secure your data and to stay safe online</p>
 <div class="row list--item">
