--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
 language: en
+sub: blog
 ---
 {% assign engPosts = site.posts | where: "language", "en" %}
 {% for post in engPosts limit:15 %}  
