--- a/pages/en/1-blog.html
+++ b/pages/en/1-blog.html
@@ -4,6 +4,7 @@ title: What's New?
 permalink: /en/
 language: en
 tag: main
+sub: blog
 ---
 {% assign engPosts = site.posts | where: "language", "en" %}
 {% for post in engPosts limit:15 %}  
