--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -4,6 +4,7 @@ title: "Videos"
 permalink: /en/videos/
 language: en
 tag: main
+sub: videos
 ---
 <p>Enhance your trading skills and knowledge trough our library of video tutorials, walkthroughs, and more.</p>
 <div class="video-container">
