--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -4,6 +4,7 @@ title: E-Books
 permalink: /en/ebooks/
 language: en
 tag: main
+sub: ebooks
 ---
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
 <div class=" list--item-lg">
