--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -4,6 +4,7 @@ title: Glossary
 permalink: /en/glossary/
 language: en
 tag: main
+sub: glosserygroup
 ---
 <p>Common financial terms that you will come across when trading Forex, CFDs, binary options, and more with ChampionFX</p>
 
