--- a/index.html
+++ b/index.html
@@ -1,19 +1,109 @@
 ---
 layout: home
 language: en
-sub: blog
 ---
-{% assign engPosts = site.posts | where: "language", "en" %}
-{% for post in engPosts limit:15 %}  
-<div class="row list--item">
-	<div class="col-sm-12">
-		<div class="Page-List__item__excerpt">	
-		    <a class="Page-List__item__title" href="{{ post.url | prepend: site.baseurl }}"><h2>{{ post.title }}</h2></a>
-			<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
-		<p>{{ post.excerpt }}</p>	
-		<p><a href="{{ post.url | prepend: site.baseurl }}">Read more..</a></p>
+<div class="row">
+	<div class="col-sm">
+		<div class="center-text">
+			<h1>What is binary options trading</h1>
+			<div class="fx-divider"></div>
+			<p>Understand the simple idea behind binary options, how they work, and their advantages over other financial instruments.</p>
 		</div>
 	</div>	
 </div>
-{% endfor %}
-<p class="p--action"><a class="button" href="{{ "/en/blog/" | relative_url }}"><span>Read more in the archive</span></a></p>
+<div class="separator fill-bg-color"></div>
+<div class="row">
+	<div class="col-md Home__grid">				
+		<div class="Home__grid-wrap">
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>What’s new</h3>
+					<div class="separator primary-color"></div>
+					<p>Catch all the latest updates from the ChampionFX team on our official blog.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Daily report</h3>
+					<div class="separator primary-color"></div>
+					<p>Get daily market insights, brought to you by financial analyst and editor, Dave Evans.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Videos</h3>
+					<div class="separator primary-color"></div>
+					<p>Enhance your trading skills and knowledge through tutorials, walkthroughs, and more.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Contributors</h3>
+					<div class="separator primary-color"></div>
+					<p>Learn more about our contributors, including Vince Stanzione and Dave Evans.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Ebooks</h3>
+					<div class="separator primary-color"></div>
+					<p>Download free ebooks and guides on Forex trading, financial market analysis, and more.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Learning centre</h3>
+					<div class="separator primary-color"></div>
+					<p>Learn how to be a better trader and take advantage of platform features.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>Glossary</h3>
+					<div class="separator primary-color"></div>
+					<p>Not sure what a certain trading term means? Find a simple explanation here.</p>				
+				</div>
+			</div>
+			<div class="Home__grid-wrap__box">
+				<div class="Home__grid-wrap__box__boxInner">
+					<h3>FAQ</h3>
+					<div class="separator primary-color"></div>
+					<p>Get answers to your most pressing questions from the markets, to platforms, and more.</p>				
+				</div>
+			</div>
+		</div>
+	</div>
+</div>	
+<div class="center-text">
+	<div class="row">
+		<div class="col-sm">
+			<h2>Start trading</h2>
+			<div class="fx-divider"></div>
+			<div class="row">
+				<div class="col-md-5 push-md-1">
+					<h3>New to ChampionFX?</h3>
+					<div class="separator primary-color col-xs-6 push-xs-3"></div>
+					<p>Register now and get access to all our tools and platforms. Trade with a risk-free, virtual account before you fund your account.</p>
+					<div class="fx-divider"></div>
+					<p><a class="button" href=""><span>Create a new account</span></a></p>
+				</div>
+				<div class="col-md-5 push-md-1">
+					<h3>Already a client?</h3>
+					<div class="separator primary-color col-xs-6 push-xs-3"></div>
+					<p>Log in now to access all the tools and platforms you need to take advantage of opportunities in the financial markets.</p>
+					<div class="fx-divider"></div>
+					<p><a class="button" href=""><span>Log in to your account</span></a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="separator fill-bg-color"></div>
+<div class="row">
+	<div class="col-sm">
+		<div class="center-text">
+			<h2>Got questions?</h2>
+			<p>Read our FAQ or contact us.</p>
+		</div>
+	</div>	
+</div>
