--- a/pages/en/1-blog.html
+++ b/pages/en/1-blog.html
@@ -6,6 +6,7 @@ language: en
 tag: main
 sub: blog
 ---
+<p>Follow our official blog for the latest ChampionFX product and feature updates.</p>
 {% assign engPosts = site.posts | where: "language", "en" %}
 {% for post in engPosts limit:15 %}  
 <div class="row list--item">
