--- a/pages/en/2-daily-report.html
+++ b/pages/en/2-daily-report.html
@@ -6,6 +6,8 @@ language: en
 tag: main
 sub: report
 ---
+<p>Gain invaluable insights into the Forex markets through a combination of fundamental, political, and technical analysis – only in this daily market report by Dave Evans. He also comments on the occasional stock market news through a primarily quantitative approach.</p>
+<div class="v-space"></div>
 <div class="daily-report">
     <p>
         <select class="report-list"></select>
