--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -6,7 +6,7 @@ language: en
 tag: main
 sub: videos
 ---
-<p>Enhance your trading skills and knowledge trough our library of video tutorials, walkthroughs, and more.</p>
+<p>Enhance your trading skills and knowledge through our library of video tutorials, walkthroughs, and more.</p>
 <div class="video-container">
     <iframe src="//www.youtube.com/embed/uTxJcFymyRE" allowfullscreen></iframe>	
 </div>
