--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -7,6 +7,7 @@ tag: main
 sub: ebooks
 ---
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
+<h3>Free ebooks and guides</h3>
 <div class=" list--item-lg">
 	<div class="row">
 		<div class="col-sm-2">
@@ -34,7 +35,7 @@ sub: ebooks
 			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Trading the Forex Market</h2></a>
 			<div class="separator primary-color"></div>
 			<p class="secondary-color">Author: Vince Stanzione</p>
-			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that empower you to make better decisions when you are trading your favourite currency pairs.</p>		
+			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that will empower you to make better decisions when you are trading your favourite currency pairs.</p>		
 			<p><a class="button" href="#"><span>Download</span></a></p>							
 		</div>
 	</div>
