--- a/pages/en/7-learning-center.html
+++ b/pages/en/7-learning-center.html
@@ -7,3 +7,27 @@ tag: main
 sub: learningcentre
 ---
 <p>Learn how to be a better trader and take advantage of innovative platform features with our how-to articles, platform guides, and more.</p>
+<div class="separator fill-bg-color"></div>
+<h3>Algorithmic trading</h3>
+<p>Algorithmic trading is also known as automated trading, where you use applications known as trading robots to automatically analyse and execute your trades for you. Trading robots are also known as Expert Advisors or EAs...</p>
+<p><a class="button" href="{{ "/en/algorithmic-and-copy-trading/" | relative_url }}"><span>Read more</span></a></p>
+<div class="separator fill-bg-color"></div>
+<h3>Copy trading</h3>
+<p>Use the trading signals service to copy the trading operations of a more experienced trader. When you subscribe to a signal, the same trades will be automatically executed on your account...</p>
+<p><a class="button" href="{{ "/en/algorithmic-and-copy-trading/" | relative_url }}"><span>Read more</span></a></p>
+<div class="separator fill-bg-color"></div>
+<h3>How to develop your own technical indicators</h3>
+<p>A technical indicator is the most important tool used in technical analysis. Some of the most popular indicators are available for free, and they come pre-built into the MetaTrader 5 platform...</p>
+<p><a class="button" href="{{ "/en/custom-technical-indicators-and-trading-robots/" | relative_url }}"><span>Read more</span></a></p>
+<div class="separator fill-bg-color"></div>
+<h3>MQL5 Wizard</h3>
+<p>If you’re looking to build a trading robot quickly and easily, you can also try the MQL5 Wizard that lets you build one without having to write a single line of code...</p>
+<p><a class="button" href="{{ "/en/custom-technical-indicators-and-trading-robots/" | relative_url }}"><span>Read more</span></a></p>
+<div class="separator fill-bg-color"></div>
+<h3>Technical analysis</h3>
+<p>Technical analysis is a way to forecast the price movement of a financial asset. You will study financial charts with the help of tools such as technical indicators and analytical objects...</p>
+<p><a class="button" href="{{ "/en/technical-fundamental-analysis/" | relative_url }}"><span>Read more</span></a></p>
+<div class="separator fill-bg-color"></div>
+<h3>Security Tips</h3>
+<p>Here at ChampionFX, we take that extra step to protect you. Here are a few guidelines to secure your data and to stay safe online...</p>
+<p><a class="button" href="{{ "/en/security-tips/" | relative_url }}"><span>Read more</span></a></p>
