--- a/pages/en/learningcenter/security-tips.html
+++ b/pages/en/learningcenter/security-tips.html
@@ -6,7 +6,7 @@ language: en
 tag: learning
 sub: learningcentre
 ---
-<p>Here at ChampionFX, we take that extra step to protect you. Here are a few guidelines to secure your data and to stay safe online</p>
+<p>Here at ChampionFX, we take that extra step to protect you. Here are a few guidelines to secure your data and to stay safe online.</p>
 <h2>Suspicious content</h2>
 <p>Don't click links in suspicious emails, SMSes, or pop-ups. Always type the web address yourself. The correct URL is www.champion-fx.com.</p>
 <h2>Login ID and password</h2>
