--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -8,6 +8,7 @@ sub: ebooks
 ---
 <p>Learn more about Forex, financial market analysis, trading strategies, and more with exclusive content by experienced traders and analysts.</p>
 <h3>Free ebooks and guides</h3>
+<div class="separator fill-bg-color"></div>
 <div class=" list--item-lg">
 	<div class="row">
 		<div class="col-sm-2">
