--- a/pages/en/learningcenter/security-tips.html
+++ b/pages/en/learningcenter/security-tips.html
@@ -7,20 +7,28 @@ tag: learning
 sub: learningcentre
 ---
 <p>Here at ChampionFX, we take that extra step to protect you. Here are a few guidelines to secure your data and to stay safe online.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Suspicious content</h2>
 <p>Don't click links in suspicious emails, SMSes, or pop-ups. Always type the web address yourself. The correct URL is www.champion-fx.com.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Login ID and password</h2>
 <p>Never share valuable information such as your login ID and password via emails, texts or phone calls.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Unsolicited promotional emails</h2>
 <p>Never respond to unsolicited promotional emails. If in doubt, just delete the email.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Secure connection</h2>
 <p>Check out the padlock icon on your browser. This icon indicates that the website uses a secure connection.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Device security</h2>
 <p>Invest in device security such as a personal firewall, anti-spyware, or antivirus software. Update this software regularly!</p>
+<div class="separator fill-bg-color"></div>
 <h2>Share with trusted sources</h2>
 <p>Share your e-mail address with only trusted sources. Only your family, friends, and trusted business contacts should have your personal e-mail address. Do not post your e-mail address on forums, or in public chat rooms.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Use separate email accounts</h2>
 <p>Imagine if you could consolidate all of your work emails into a single work account and all of your personal communications with your personal account, and a throwaway account for potential spam links. This way, if someone hacks your work account, all of your personal emails are still safe or vice versa.</p>
+<div class="separator fill-bg-color"></div>
 <h2>Create smart and strong passwords</h2>
 <p>Make it difficult for hackers to crack your password. You may create a smart password by incorporating capital letters, numbers, special characters and using more than six characters.
 We hope you find this information useful. If you have any further questions please write to us at support@champion-fx.com.</p>
