--- a/pages/en/3-videos.html
+++ b/pages/en/3-videos.html
@@ -10,6 +10,6 @@ sub: videos
 <div class="video-container">
     <iframe src="//www.youtube.com/embed/uTxJcFymyRE" allowfullscreen></iframe>	
 </div>
-<p class="p--action"><a class="button" href=""><span>Get started, Try it now!</span></a></p>
+<p class="p--action"><a class="button" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Get started, Try it now!</span></a></p>
 <h1>Archive</h1>
 <div data-role="youtube-playlist" data-list-id="PLFiUR_KIgoDLxS5teiLeBr2zOiNGrGPrF"></div>
