--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@ language: en
 					<div class="separator primary-color col-xs-6 push-xs-3"></div>
 					<p>Register now and get access to all our tools and platforms. Trade with a risk-free, virtual account before you fund your account.</p>
 					<div class="fx-divider"></div>
-					<p><a class="button" href=""><span>Create a new account</span></a></p>
+					<p><a class="button" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Create a new account</span></a></p>
 				</div>
 				<div class="col-md-5 push-md-1">
 					<h3>Already a client?</h3>
 					<div class="separator primary-color col-xs-6 push-xs-3"></div>
 					<p>Log in now to access all the tools and platforms you need to take advantage of opportunities in the financial markets.</p>
 					<div class="fx-divider"></div>
-					<p><a class="button" href=""><span>Log in to your account</span></a></p>
+					<p><a class="button" href="https://www.champion-fx.com/"><span>Log in to your account</span></a></p>
 				</div>
 			</div>
 		</div>
