--- a/index.html
+++ b/index.html
@@ -12,68 +12,52 @@ language: en
 	</div>	
 </div>
 <div class="separator fill-bg-color"></div>
-<div class="row">
-	<div class="col-md Home__grid">				
-		<div class="Home__grid-wrap">
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>What’s new</h3>
-					<div class="separator primary-color"></div>
-					<p>Catch all the latest updates from the ChampionFX team on our official blog.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Daily report</h3>
-					<div class="separator primary-color"></div>
-					<p>Get daily market insights, brought to you by financial analyst and editor, Dave Evans.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Videos</h3>
-					<div class="separator primary-color"></div>
-					<p>Enhance your trading skills and knowledge through tutorials, walkthroughs, and more.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Contributors</h3>
-					<div class="separator primary-color"></div>
-					<p>Learn more about our contributors, including Vince Stanzione and Dave Evans.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Ebooks</h3>
-					<div class="separator primary-color"></div>
-					<p>Download free ebooks and guides on Forex trading, financial market analysis, and more.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Learning centre</h3>
-					<div class="separator primary-color"></div>
-					<p>Learn how to be a better trader and take advantage of platform features.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>Glossary</h3>
-					<div class="separator primary-color"></div>
-					<p>Not sure what a certain trading term means? Find a simple explanation here.</p>				
-				</div>
-			</div>
-			<div class="Home__grid-wrap__box">
-				<div class="Home__grid-wrap__box__boxInner">
-					<h3>FAQ</h3>
-					<div class="separator primary-color"></div>
-					<p>Get answers to your most pressing questions from the markets, to platforms, and more.</p>				
-				</div>
-			</div>
-		</div>
+<div class="row center-text">
+	<div class="col-md">
+		<h3>What’s new</h3>
+		<div class="separator primary-color"></div>
+		<p>Catch all the latest updates from the ChampionFX team on our official blog.</p>				
 	</div>
-</div>	
+	<div class="col-md">
+		<h3>Daily report</h3>
+		<div class="separator primary-color"></div>
+		<p>Get daily market insights, brought to you by financial analyst and editor, Dave Evans.</p>				
+	</div>
+	<div class="col-md">
+		<h3>Videos</h3>
+		<div class="separator primary-color"></div>
+		<p>Enhance your trading skills and knowledge through tutorials, walkthroughs, and more.</p>				
+	</div>
+	<div class="col-md">
+		<h3>Contributors</h3>
+		<div class="separator primary-color"></div>
+		<p>Learn more about our contributors, including Vince Stanzione and Dave Evans.</p>				
+	</div>
+</div>
+<div class="fx-divider"></div>
+<div class="row center-text">
+	<div class="col-md">
+		<h3>Ebooks</h3>
+		<div class="separator primary-color"></div>
+		<p>Download free ebooks and guides on Forex trading, financial market analysis, and more.</p>				
+	</div>
+	<div class="col-md">
+		<h3>Learning centre</h3>
+		<div class="separator primary-color"></div>
+		<p>Learn how to be a better trader and take advantage of platform features.</p>				
+	</div>
+	<div class="col-md">
+		<h3>Glossary</h3>
+		<div class="separator primary-color"></div>
+		<p>Not sure what a certain trading term means? Find a simple explanation here.</p>				
+	</div>
+	<div class="col-md">
+		<h3>FAQ</h3>
+		<div class="separator primary-color"></div>
+		<p>Get answers to your most pressing questions from the markets, to platforms, and more.</p>				
+	</div>
+</div>
+<div class="separator fill-bg-color"></div>
 <div class="center-text">
 	<div class="row">
 		<div class="col-sm">
