--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -287,7 +287,7 @@ sub: glosserygroup
 					</div>
 					<div class="col-sm-11 glossary-tab-content">
 						<h3>Sell limit</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nunc metus, placerat nec vulputate sit amet, semper non metus. Morbi vel mi sapien, a egestas nunc. Vivamus bibendum lacinia elit ultrices pellentesque.</p>
+						<p>Figure used to calculate margin requirements for ‘Sell limit’ orders.</p>
 						<div class="separator fill-bg-color"></div>
 						<h3>Sell stop</h3>
 						<p>Figure used to calculate margin requirements for ‘Sell stop’ orders.</p>
