--- a/pages/en/2-daily-report.html
+++ b/pages/en/2-daily-report.html
@@ -1,10 +1,20 @@
 ---
-layout: full-width
+layout: page-daily-report
 title: Daily Report
 permalink: /en/daily-report/
 language: en
 tag: main
 sub: report
 ---
-<p>Gain invaluable insights into the Forex markets through a combination of fundamental, political, and technical analysis – only in this daily market report by Dave Evans. He also comments on the occasional stock market news through a primarily quantitative approach.</p>
-<div class="v-space"></div>
+{% assign engPosts = site.posts | where: "language", "en" %}
+{% for post in engPosts limit:3 %}  
+	{% if post.tag == "daily-report" %}	
+		<div class="row">
+			<div class="col-sm">
+				<h1>{{ post.title }}</h1>
+				<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
+				<div class="rte">{{ post.content }}</div>	
+			</div>	
+		</div>
+	{% endif %}	
+{% endfor %}
