--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -13,15 +13,15 @@ sub: ebooks
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="">
-				 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+				 <img src="{{ "/assets/images/ebook_en_Vince_SecretsToSmartTrading_v20_cfx.jpg" | relative_url }}" alt="Secrets to Smart Trading with ChampionFX">	
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
-			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Financial Trading with ChampionFX</h2></a>
+			<a class="" href="{{ "/download/ebook_en_Vince_SecretsToSmartTrading_v20_cfx.pdf" | relative_url }}"><h2>Secrets to Smart Trading in Volatile Financial Markets</h2></a>
 			<div class="separator primary-color"></div>
-			<p class="secondary-color">Author: ChampionFX</p>
-			<p>Learn more about ChampionFX and the products we offer, as well as basic concepts of trading. This book is ideal for new ChampionFX clients.</p>		
-			<p><a class="button" href="#"><span>Download</span></a></p>							
+			<p class="secondary-color">Author: Vince Stanzione</p>
+			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that will empower you to make better decisions when you are trading your favourite currency pairs.</p>		
+			<p><a class="button" href="{{ "/download/ebook_en_Vince_SecretsToSmartTrading_v20_cfx.pdf" | relative_url }}"><span>Download</span></a></p>							
 		</div>
 	</div>
 </div>
