--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -17,7 +17,7 @@ sub: ebooks
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
-			<a class="" href="{{ "/download/ebook_en_Vince_SecretsToSmartTrading_v20_cfx.pdf" | relative_url }}"><h2>Secrets to Smart Trading in Volatile Financial Markets</h2></a>
+			<a class="" href="{{ "/download/ebook_en_Vince_SecretsToSmartTrading_v20_cfx.pdf" | relative_url }}"><h2>Secret to Smart Trading in Volatile Markets: How to trade wisely with ChampionFX in 2017</h2></a>
 			<div class="separator primary-color"></div>
 			<p class="secondary-color">Author: Vince Stanzione</p>
 			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that will empower you to make better decisions when you are trading your favourite currency pairs.</p>		
