--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -29,15 +29,15 @@ sub: ebooks
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="">
-				 <img src="{{ "/assets/images/download-7-high-res-img.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+				 <img src="{{ "/assets/images/vince_ebook_2017_cfx.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
-			<a class="" href="https://marketing.binary.com/ebooks/ebook_en_binary_handbook.pdf"><h2>Trading the Forex Market</h2></a>
+			<a class="" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><h2>Trading the Forex Market</h2></a>
 			<div class="separator primary-color"></div>
 			<p class="secondary-color">Author: Vince Stanzione</p>
-			<p>Want to trade the Forex more effectively? Discover the tools, strategies, and tips that will empower you to make better decisions when you are trading your favourite currency pairs.</p>		
-			<p><a class="button" href="#"><span>Download</span></a></p>							
+			<p>Interested to trade the Forex markets more effectively? Discover tools, strategies, and tips to enable you to make better decisions when trading currency pairs.</p>		
+			<p><a class="button" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><span>Download</span></a></p>							
 		</div>
 	</div>
 </div>
