--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -72,7 +72,12 @@ sub: glosserygroup
 						<h1>A</h1>
 					</div>
 					<div class="col-sm-11 glossary-tab-content">
-						
+						<h3>Algorithmic trading</h3>
+						<p>Algorithmic trading – also known as automated trading – is a type of trading that uses applications known as Expert Advisors (EAs) to automatically analyse and execute your trades for you. EAs are also known as trading robots.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Ask</h3>
+						<p>Ask price, also known as buy price, is the price that an asset can be bought.</p>
+						<div class="separator fill-bg-color"></div>
 					</div>
 				</div>
 			</div>
@@ -82,13 +87,19 @@ sub: glosserygroup
 						<h1>B</h1>
 					</div>
 					<div class="col-sm-11 glossary-tab-content">
-						<h3>Buy limit</h3>
+						<h3>Base currency</h3>
+						<p>Base currency refers to the first currency listed in a currency pair. It is also known as transaction currency. For example, in USD/JPY, the base currency is USD.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Bid</h3>
+						<p>Bid price, also known as sell price, is the price that an asset can be sold.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Buy limit <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Buy limit’ orders.</p>
 						<div class="separator fill-bg-color"></div>
-						<h3>Buy stop</h3>
+						<h3>Buy stop <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Buy stop’ orders.</p>
 						<div class="separator fill-bg-color"></div>
-						<h3>Buy stop limit</h3>
+						<h3>Buy stop limit <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Buy stop limit’ orders.</p>
 						<div class="separator fill-bg-color"></div>
 					</div>
@@ -286,14 +297,17 @@ sub: glosserygroup
 						<h1>S</h1>
 					</div>
 					<div class="col-sm-11 glossary-tab-content">
-						<h3>Sell limit</h3>
+						<h3>Sell limit <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Sell limit’ orders.</p>
 						<div class="separator fill-bg-color"></div>
-						<h3>Sell stop</h3>
+						<h3>Sell stop <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Sell stop’ orders.</p>
 						<div class="separator fill-bg-color"></div>
-						<h3>Sell stop limit</h3>
+						<h3>Sell stop limit <span>(contract specification)</span></h3>
 						<p>Figure used to calculate margin requirements for ‘Sell stop limit’ orders.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Slippage</h3>
+						<p>Slippage refers to an event where the price at which your order is executed does not match the price at which the order was made. Slippage is more likely to occur in volatile, or low-liquidity markets.</p>
 						<div class="separator fill-bg-color"></div>
 						<h3>Spread</h3>
 						<p>The spread is the difference between the bid (sell) and ask (buy) price. There are two types of spreads: floating and fixed.</p>
@@ -309,8 +323,14 @@ sub: glosserygroup
 						</ul>
 						<p><img src="{{ "/assets/images/spread.svg" | relative_url }}"></p>
 						<div class="separator fill-bg-color"></div>
-						<h3>Stops level</h3>
+						<h3>Stocks</h3>
+						<p>Stocks, also known as shares or equities, are tradeable units of a company. Buying a company’s stock gives you partial ownership of that company.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Stops level <span>(contract specification)</span></h3>
 						<p>When you’ve reached the Stops level, you will not be able to place Stop Loss, Take Profit, and pending orders. If you do place an order, the server will return an ‘Invalid Stops’ message and your order will not be accepted.</p>
+						<div class="separator fill-bg-color"></div>
+						<h3>Stop order</h3>
+						<p>A stop order – also known as a stop-loss order –– is an instruction to automatically close an open position when the price reaches an unfavourable level. You can set the price level for a stop order when you purchase a contract.</p>
 						<div class="separator fill-bg-color"></div>
 					</div>
 				</div>
