--- a/pages/en/6-glossary.html
+++ b/pages/en/6-glossary.html
@@ -358,7 +358,7 @@ sub: glosserygroup
 								<p>A fixed spread is a spread value that stays the same, no matter the time or market volatility.</p>
 							</li>
 						</ul>
-						<p><img class="img-md" src="{{ "/assets/images/spread.svg" | relative_url }}"></p>
+						<p class="center-text"><img class="img-md" src="{{ "/assets/images/spread.svg" | relative_url }}"></p>
 						<div class="separator fill-bg-color"></div>
 						<h3>Stocks</h3>
 						<p>Stocks, also known as shares or equities, are tradeable units of a company. Buying a company’s stock gives you partial ownership of that company.</p>
