--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -33,7 +33,7 @@ sub: ebooks
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
-			<a class="" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><h2>Trading the Forex Market - The Smart Way with ChampionFX</h2></a>
+			<a class="" href="{{ "/download/vince_ebook_2017_cfx.pdf" | relative_url }}"><h2>Trading the Forex Market</h2></a>
 			<div class="separator primary-color"></div>
 			<p class="secondary-color">Author: Vince Stanzione</p>
 			<p>Interested to trade the Forex markets more effectively? Discover tools, strategies, and tips to enable you to make better decisions when trading currency pairs.</p>		
