--- a/pages/en/5-ebooks.html
+++ b/pages/en/5-ebooks.html
@@ -29,7 +29,7 @@ sub: ebooks
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="">
-				 <img src="{{ "/assets/images/vince_ebook_2017_cfx.jpg" | relative_url }}" alt="Financial Trading with ChampionFX">	
+				 <img src="{{ "/assets/images/vince_ebook_2017_cfx.jpg" | relative_url }}" alt="Trading the Forex Market">	
 			</div>
 		</div>	
 		<div class="col-sm-10">				   
