--- a/pages/en/faq/1-faq-about.html
+++ b/pages/en/faq/1-faq-about.html
@@ -41,6 +41,7 @@ subtag: home
 		</div>	
 		
 </div>
+<div class="bm-20"></div>
 <script type="text/javascript">
     $('#accordion').accordion({
       heightStyle : 'content',
