--- a/pages/en/faq/3-faq-trading.html
+++ b/pages/en/faq/3-faq-trading.html
@@ -152,11 +152,11 @@ sub: faq
 				</div>		
 			<h3>What is a margin call and how does it affect my open positions?</h3>
 				<div>
-					<p>A margin call is a situation where your account is unable to cover the margin requirements.</p>
+					<p>Margin call is a level that’s established by ChampionFX to draw your attention to the fact that total losses on your open positions have reached a critical level. Thus, you will need to deposit more funds to increase your available margin, or close some of your trades.</p>
 				</div>	
 			<h3>What is a stop out?</h3>
 				<div>
-					<p>A stop out level is the point where you are unable to maintain an open position. As a result, all your pending orders will be deleted and your open positions are forcibly closed. This is due to insufficient margin in your account balance.</p>
+					<p>A stop out level is the point where you are unable to maintain an open position. As a result, your open positions are forcibly closed due to insufficient margin in your account balance.</p>
 				</div>		
 		</div>
     </div>
