--- a/pages/en/faq/5-faq-accounts.html
+++ b/pages/en/faq/5-faq-accounts.html
@@ -6,3 +6,197 @@ language: en
 tag: faq
 sub: faq
 ---
+<div class="has-tabs">
+    <ul>
+      <li><a href="#tab_1">Opening an account</a></li>
+      <li><a href="#tab_2">Live accounts</a></li>
+	  <li><a href="#tab_3">Demo accounts</a></li>
+	  <li><a href="#tab_4">Deposits and withdrawals</a></li>
+    </ul>
+	<div class="bm-20"></div>
+    <div id="tab_1">
+		<div id="accordion">
+			<h3>What is the difference between a ChampionFX real account and an MT5 account</h3>
+				<div>
+					<p>Cent, Standard and STP accounts allow you to trade Forex, CFDs, and other markets on our MT5 trading platform using real money.</p>
+				</div>
+			<h3>What base currency can I use to open an account with ChampionFX?</h3>
+				<div>
+					<p>You can open an account with ChampionFX using the following base currencies: US Dollar, Great Britain Pound, Euro, and Australian Dollar.</p>
+				</div>
+			<h3>Do you offer swap-free accounts?</h3>
+				<div>
+					<p>ChampionFX offers a variety of account types to cater to your unique needs. Our Cent, Standard, and STP accounts all come with a swap-free option. Please contact us at <a href="mailto:marketing@champion-fx.com">marketing@champion-fx.com</a> to find out how you can activate your swap-free option.</p>
+				</div>
+			<h3>How do I open an account with ChampionFX?</h3>
+				<div>
+					<p>It’s simple. Just head to our <a href="https://www.champion-fx.com">homepage</a> and enter your email to create your free Champion Trader virtual account.</p>
+				</div>
+			<h3>Can I open more than one trading account?</h3>
+				<div>
+					<p>ChampionFX believes in giving you the flexibility you need to enable you to become a champion trader. That’s why we’ve given you the ability to open more than one MT5 trading account. However, you cannot open more than one of the same trading account type, whether it’s Cent, Standard, or STP.</p>
+				</div>
+			<h3>Can I open a joint account?</h3>
+				<div>
+					<p>Yes, ChampionFX allows you to establish a joint account that’s shared between you and another ChampionFX client. To request a joint account, contact <a href="mailto:support@champion-fx.com">support@champion-fx.com</a> today.</p>
+				</div>
+			<h3>Can I open a corporate account?</h3>
+				<div>
+					<p>Yes, ChampionFX allows individuals to open corporate accounts that are registered under a company name, rather than an individual. To open a corporate account, contact <a href="mailto:support@champion-fx.com">support@champion-fx.com</a> today.</p>
+				</div>
+			<h3>How long does it take to open an account?</h3>
+				<div>
+					<p>Every client starts out with a ChampionFX virtual account and opening one takes less than a minute. Just provide us with your email address, wait for the verification token, and fill in your password to open one today.</p>
+				</div>
+			<h3>How do I change the leverage on my account?</h3>
+				<div>
+					<p>We offer three types of MT5 trading accounts, and each account comes with its own unique leverage. You may open one Cent, Standard, and STP account each to access the unique leverage they offer.</p>
+				</div>
+		</div>		
+	</div>	
+    <div id="tab_2">
+        <div id="tab_2_accordion">
+			<h3>How many types of live accounts do you offer?</h3>
+				<div>
+					<p>We currently offer four types of live/real/trading accounts:</p>
+					<ul class="bullet">
+						<li>Champion Trader real account</li>
+						<li>MT5 Cent account</li>
+						<li>MT5 Standard account</li>
+						<li>MT5 STP account</li>
+					</ul>
+				</div>
+			<h3>How do I open a live account?</h3>
+				<div>
+					<p>For Champion Trader, you’ll need to create a Champion Trader virtual account first before upgrading to a real account.</p>
+					<p>For MT5 you can open a Real Cent, Standard, or STP account, without being necessary to open a demo account.</p>
+				</div>
+			<h3>What documents do I need to open a live account?</h3>
+				<div>
+					<p>Under the terms of our financial license, clients who open a live account are required to authenticate their account. You may do so by sending scanned copies of the following documents to <a href="mailto:support@champion-fx.com">support@champion-fx.com</a> within five days of opening your live account:</p>
+					<ul class="bullet">
+						<li>Proof of identity – Passport, driving license (either provisional or full), or identity card that shows your full name and date of birth</li>
+						<li>Proof of address – Utility bill or bank statement that’s not more than three months old</li>
+					</ul>
+				</div>	
+			<h3>How long does it take to open a live account?</h3>
+				<div>
+					<p>Opening a live account takes less than a minute and you can use it to start trading immediately. However, due to the terms of our financial license, you’ll need to authenticate your account within five days by submitting your proof of identity and proof of address.</p>
+				</div>
+			<h3>What is the minimum deposit requirement for each account type?</h3>
+				<div>
+					<p>At ChampionFX –– where the client is king –– there are no minimum deposit requirements and no commissions per trade for MT5 accounts and only as little as $5 Deposit for Binary Account. We are committed to providing you with a unique opportunity in the world of Forex trading, whether you’re a veteran trader or beginner.</p>
+				</div>
+			<h3>Do you charge any commission on any of your accounts?</h3>
+				<div>
+					<p>All ChampionFX accounts, whether it’s Champion Trader or MT5, can trade commission-free.</p>
+				</div>		
+		</div>
+    </div>
+	<div id="tab_3">
+		<div id="tab_3_accordion">
+			<h3>Do you offer demo accounts?</h3>
+				<div>
+					<p>Absolutely. We believe that virtual and demo accounts give you a fantastic, risk-free opportunity to test-drive our products and services before you open live accounts and deposit real funds with us.</p>
+				</div>
+			<h3>How do I open a demo account?</h3>
+				<div>
+					<p>All you need to do is head to <a href="https://www.champion-fx.com">our homepage</a> and enter your email to create your free Champion Trader virtual account. Once you’ve completed all the necessary steps, log into your account and head to your account settings to open an MT5 demo account.</p>
+				</div>
+			<h3>How long does your demo account last?</h3>
+				<div>
+					<p>Your demo account will remain active as long as you fulfil either one of the following criteria:</p>
+					<ul class="bullet">
+						<li>Executed a trade on your demo account within the last three months</li>
+						<li>Upgraded to an MT5 real account (either a Cent, Standard, or STP account), and executed a trade on your MT5 real account within the last three months</li>
+					</ul>
+				</div>
+			<h3>How can I add more funds to my demo account?</h3>
+				<div>
+					<p>If you’ve depleted the USD 10,000 of virtual funds in your demo account, just email us at <a href="mailto:support@champion-fx.com">support@champion-fx.com</a> to request for additional funds.</p>
+				</div>
+			<h3>How many demo accounts am I allowed to have?</h3>
+				<div>
+					<p>You can have a demo account for each type of live account available: Cent, Standard, and STP. You are given a Cent demo account by default. If you’d like to create a Standard or STP demo account, please email us at <a href="mailto:support@champion-fx.com">support@champion-fx.com</a>.</p>
+				</div>
+			<h3>What is the default leverage on my demo account?</h3>
+				<div>
+					<p>The default leverage on your demo account is similar to the default leverage on a Cent account: up to 1:1,000.</p>
+				</div>
+			<h3>Is the spread in the demo account similar to the spread in the live accounts?</h3>
+				<div>
+					<p>Yes, the spread in your demo account is similar to its live account equivalent. For example, the spread in your Cent demo account will be similar to the spread in your Cent live account.</p>
+				</div>		
+		</div>       
+    </div>
+	<div id="tab_4">
+		<div id="tab_4_accordion">
+			<h3>How do I deposit funds into my ChampionFX account?</h3>
+				<div>
+					<p>You can deposit funds into your ChampionFX account through <a href="https://www.champion-fx.com/en/cashier.html">our Cashier service</a> by using credit/debit card or e-currency.</p>
+				</div>
+			<h3>What currencies do you support for deposits?</h3>
+				<div>
+					<p>We accept deposits in the following currencies: US Dollar, Great Britain Pound, Euro, and Australian Dollar.</p>
+				</div>
+			<h3>Can I transfer funds between my accounts?</h3>
+				<div>
+					<p>Yes, to fund your MT5 account(s), you must fund your ChampionFX real account first. Then, you will transfer funds from your ChampionFX real account into your MT5 account(s).</p>
+				</div>
+			<h3>Can I deposit funds using a credit or debit card?</h3>
+				<div>
+					<p>Absolutely. We accept deposits using the following cards: Visa, MasterCard, and China UnionPay.</p>		
+				</div>
+			<h3>Do you charge a fee for each deposit and withdrawal?</h3>
+				<div>
+					<p>All deposit and withdrawal transactions are free of fees or commissions.</p>		
+				</div> 
+			<h3>Is there a minimum deposit amount?</h3>
+				<div>
+					<p>Minimum deposits range from USD 5 to USD 10, depending on the payment method you use.</p>		
+				</div>
+			<h3>Do my deposit and withdrawal methods have to be similar?</h3>
+				<div>
+					<p>Yes, if you’ve deposited funds into your ChampionFX account using a certain payment source, you will need to withdraw your funds using the same payment source.</p>		
+				</div>
+			<h3>How long does it take for deposited funds to appear in my account?</h3>
+				<div>
+					<p>Deposits are processed by ChampionFX within 24 hours. However, your bank or payment service provider may require additional processing time.</p>		
+				</div>
+			<h3>How do I withdraw funds from my ChampionFX account?</h3>
+				<div>
+					<p>You can withdraw funds from your ChampionFX account through <a href="https://www.champion-fx.com/en/cashier.html">our Cashier service</a> by using the same payment method used to deposit funds into your account.</p>		
+				</div> 
+			<h3>How long does it take for ChampionFX to process my withdrawal request?</h3>
+				<div>
+					<p>Withdrawals are processed by ChampionFX within 24 hours. However, your bank or payment service provider may require additional processing time.</p>		
+				</div>
+			<h3>Can I see a history of all my deposits and withdrawals?</h3>
+				<div>
+					<p>Yes, just <a href="https://oauth.champion-fx.com/oauth2/authorize?app_id=2472&l=EN">log into ChampionFX</a> and then select ‘Statement’ from the drop-down menu in the top right-hand corner of the window. You will be able to see all trades, deposits, and withdrawals that have taken place on your account.</p>		
+				</div>
+			<h3>Do you allow third-party payments?</h3>
+				<div>
+					<p>Unfortunately, no. Under the terms of our financial license, third-party payments are not allowed due to its high risk for abuse.</p>		
+				</div>
+			<h3>How can I withdraw my funds through bank wire?</h3>
+				<div>
+					<p></p>		
+				</div>
+			<h3>How can I obtain your bank details?</h3>
+				<div>
+					<p></p>		
+				</div>		
+    </div>	
+</div>
+<div class="bm-20"></div>
+<script type="text/javascript">
+    $('.has-tabs').tabs();
+</script>
+<script type="text/javascript">
+    $('#accordion, #tab_2_accordion, #tab_3_accordion, #tab_4_accordion').accordion({
+      heightStyle : 'content',
+      collapsible : true,
+      active      : false
+    });
+</script>
