--- a/pages/en/faq/5-faq-accounts.html
+++ b/pages/en/faq/5-faq-accounts.html
@@ -18,6 +18,7 @@ sub: faq
 		<div id="accordion">
 			<h3>What is the difference between a ChampionFX real account and an MT5 account</h3>
 				<div>
+					<p>A ChampionFX real account lets you trade binary options on our Champion Trader platform using real money.</p>
 					<p>Cent, Standard and STP accounts allow you to trade Forex, CFDs, and other markets on our MT5 trading platform using real money.</p>
 				</div>
 			<h3>What base currency can I use to open an account with ChampionFX?</h3>
